edit controller